--- a/reading.html
+++ b/reading.html
@@ -671,7 +671,7 @@
 
     <!-- Audio Player -->
     <div class="audio-player" id="audioPlayer">
-        <i class="fas fa-music"></i>
+        <i class="fas fa-music">▶️</i>
         <audio id="backgroundAudio" loop>
         <source src="assets/audio/ambient.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
