--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@
                     <div class="feature-icon">
                         <img src="assets/images/index/mood.png" alt="Mood Icon">
                     </div>
-                    <h3 class="feature-title">Genre Sesuai Mood</h3>
-                    <p class="feature-desc">Sistem kami akan merekomendasikan buku berdasarkan mood dan preferensi membacamu saat ini.</p>
+                    <h3 class="feature-title">Pomodoro Timer</h3>
+                    <p class="feature-desc">Mari menjaga fokus kamu dengan metode 25 menit membaca dan 5 menit istirahat.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
