--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="assets/images/index/mood.png" alt="Mood Icon">
+                        <img src="assets/images/index/pomodoro-timer.jpeg" alt="Mood Icon">
                     </div>
                     <h3 class="feature-title">Pomodoro Timer</h3>
                     <p class="feature-desc">Mari menjaga fokus kamu dengan metode 25 menit membaca dan 5 menit istirahat.</p>
